Fix align rows

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,8 @@ $font-emphasis: "Droid Serif", italic; //adobe fonts
 $color-one: rgb(238, 209, 74);
 $color-two: rgb(251, 251, 251);
 $color-three: #000;
+$color-four: #f7f7f7;
+$color-five: #fff;
 
 /*Global*/
 
@@ -161,7 +163,16 @@ nav {
 /*portfolio*/
 
 .portfolio {
+	background-color: $color-four;
+
 	.box-portfolio {
+		background-color: $color-five;
+		padding: 0;
+		display: flex;
+		justify-content: space-around;
+		flex-direction: column;
+		margin-right: 1%;
+		margin-bottom: 8%;
 		height: 300px;
 		width: 290px;
 
